# d5reports

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  restart_server.sh  run.sh  update.sh
alembic/: env.py
alembic/versions/: 1edfcd75e4f7_added_returned_field_to_tasks.py  2cb6659531f8_init.py  2f40fafc3775_added_remote_days.py  6876e557c55d_added_remote_days.py  74381b07ebb2_project_email_now_optional.py  77d4a5573b12_init.py  97ccdfa65b54_init.py  b10d53adee8f_added_presence_check_to_calendar.py  ce29e2d726fd_task_status_is_optional.py  d7637ea98fc3_add_hours_worked_to_tasks.py  db871ba69fc4_added_project_id_and_project_name_to_.py  dbd7a6e1463c_add_timestamp_to_tasks.py  e32c83b8d40c_added_user_name_to_task.py  ef09f0b51487_added_user_name_to_logs.py
scripts/: local_db_data.py
src/backend/: server.py
src/backend/controllers/: calendar_controller.py  dashboard_controller.py  healthcheck_controller.py  log_controller.py  project_controller.py  task_controller.py  user_controller.py
src/backend/dependencies/: __init__.py  auth.py  db_session.py
src/backend/models/: __init__.py  models.py  pagination.py
src/backend/templates/: base.html  base_table.html  email_base.html  home.html  macros.html  pagination.html  user_create.html  user_detail.html  user_detail_htmx.html  user_login.html  users.html
src/backend/templates/calendar/: all.html  user.html
src/backend/templates/email/: log.html  multiple_logs.html
src/backend/templates/log/: create.html  detail.html  edit.html  logs.html  users.html
src/backend/templates/partials/: filters.html  table.html
src/backend/templates/project/: assign.html  create.html  detail.html  edit.html  projects.html  remove_user.html
src/backend/templates/task/: create.html  detail.html  tasks.html
src/backend/templates/user/: create.html  detail.html  login.html  remote.html  users.html
src/backend/utils/: filter_fields.py  filters_and_sort.py  pagination.py  populate_fields.py  send_emails.py  templates.py  xlsx_parser.py
src/backend/views/: log_view.py  project_view.py  task_view.py  user_view.py
src/config/: env.py
src/core/enums/: premissions.py  task_status.py
src/core/models/: __init__.py  log.py  office_calendar.py  project.py  project_user.py  remote.py  task.py  task_log.py  user.py
src/database/adapters/: mysql.py
src/database/interfaces/: adapters.py  repository.py  session.py
src/database/models/: __init__.py  association_tables.py  calendar_mapper.py  log_mapper.py  project_mapper.py  remote_mapper.py  task_log_mapper.py  task_mapper.py  user_mapper.py
src/database/repositories/: repository.py
src/database/sessions/: sqlalchemy_session.py
